--- a/Dicing/Base.lproj/Main.storyboard
+++ b/Dicing/Base.lproj/Main.storyboard
@@ -1,24 +1,92 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina5_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="HelveticaNeue.ttc">
+            <string>HelveticaNeue-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Dicing" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="newbackground" translatesAutoresizingMaskIntoConstraints="NO" id="N6F-aI-iUg">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="414" id="1Vh-6B-T3U"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="bwG-Hg-vPh">
+                                <rect key="frame" x="107" y="20" width="200" height="171"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="171" id="FR3-9P-5mq"/>
+                                    <constraint firstAttribute="width" constant="200" id="w0X-KM-KRp"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="xzi-Vp-Vpr">
+                                <rect key="frame" x="67" y="271" width="120" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="YPO-ni-Q29"/>
+                                    <constraint firstAttribute="height" constant="120" id="mn0-ih-duj"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="8Ny-dK-stv">
+                                <rect key="frame" x="236" y="271" width="120" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="5Zh-99-3N6"/>
+                                    <constraint firstAttribute="width" constant="120" id="Goa-ZL-Xg9"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Hf-hy-CY7">
+                                <rect key="frame" x="160.66666666666666" y="450" width="93" height="83"/>
+                                <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="83" id="xHX-uN-mTZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="50"/>
+                                <state key="normal" title="Roll">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="7Hf-hy-CY7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="530-Lw-cbA"/>
+                            <constraint firstItem="N6F-aI-iUg" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="6VP-MJ-n2U"/>
+                            <constraint firstItem="xzi-Vp-Vpr" firstAttribute="top" secondItem="bwG-Hg-vPh" secondAttribute="bottom" constant="80" id="CFJ-Ti-JuI"/>
+                            <constraint firstItem="8Ny-dK-stv" firstAttribute="top" secondItem="bwG-Hg-vPh" secondAttribute="bottom" constant="80" id="E8I-65-9Gb"/>
+                            <constraint firstItem="bwG-Hg-vPh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="KqX-ca-62U"/>
+                            <constraint firstItem="7Hf-hy-CY7" firstAttribute="top" secondItem="xzi-Vp-Vpr" secondAttribute="bottom" constant="59" id="LEH-LW-DSM"/>
+                            <constraint firstItem="N6F-aI-iUg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="NIP-hl-EEW"/>
+                            <constraint firstItem="bwG-Hg-vPh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Zur-8Q-yDd"/>
+                            <constraint firstItem="xzi-Vp-Vpr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="bWC-Mv-dOo"/>
+                            <constraint firstItem="N6F-aI-iUg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="i6T-2u-MPv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8Ny-dK-stv" secondAttribute="trailing" constant="58" id="pS2-wa-bhr"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140.57971014492756" y="132.88043478260872"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="dice1" width="100" height="100"/>
+        <image name="diceeLogo" width="196" height="128"/>
+        <image name="newbackground" width="444" height="414"/>
+    </resources>
 </document>
