--- a/Dicing/Base.lproj/Main.storyboard
+++ b/Dicing/Base.lproj/Main.storyboard
@@ -15,10 +15,10 @@
         </array>
     </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--DiceVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Dicing" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="diceVC" customModule="Dicing" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -51,33 +51,41 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Hf-hy-CY7">
-                                <rect key="frame" x="160.66666666666666" y="450" width="93" height="83"/>
+                                <rect key="frame" x="138" y="452" width="139" height="83"/>
                                 <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="83" id="xHX-uN-mTZ"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="50"/>
                                 <state key="normal" title="Roll">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="rollPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qK8-P5-IWj"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="7Hf-hy-CY7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="530-Lw-cbA"/>
                             <constraint firstItem="N6F-aI-iUg" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="6VP-MJ-n2U"/>
                             <constraint firstItem="xzi-Vp-Vpr" firstAttribute="top" secondItem="bwG-Hg-vPh" secondAttribute="bottom" constant="80" id="CFJ-Ti-JuI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="7Hf-hy-CY7" secondAttribute="bottom" constant="201" id="DFJ-eS-zpt"/>
                             <constraint firstItem="8Ny-dK-stv" firstAttribute="top" secondItem="bwG-Hg-vPh" secondAttribute="bottom" constant="80" id="E8I-65-9Gb"/>
                             <constraint firstItem="bwG-Hg-vPh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="KqX-ca-62U"/>
-                            <constraint firstItem="7Hf-hy-CY7" firstAttribute="top" secondItem="xzi-Vp-Vpr" secondAttribute="bottom" constant="59" id="LEH-LW-DSM"/>
                             <constraint firstItem="N6F-aI-iUg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="NIP-hl-EEW"/>
+                            <constraint firstItem="7Hf-hy-CY7" firstAttribute="centerX" secondItem="bwG-Hg-vPh" secondAttribute="centerX" id="St5-2D-LHR"/>
                             <constraint firstItem="bwG-Hg-vPh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Zur-8Q-yDd"/>
                             <constraint firstItem="xzi-Vp-Vpr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="bWC-Mv-dOo"/>
                             <constraint firstItem="N6F-aI-iUg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="i6T-2u-MPv"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8Ny-dK-stv" secondAttribute="trailing" constant="58" id="pS2-wa-bhr"/>
+                            <constraint firstItem="7Hf-hy-CY7" firstAttribute="top" secondItem="xzi-Vp-Vpr" secondAttribute="bottom" constant="61" id="wPB-4R-qAY"/>
+                            <constraint firstItem="7Hf-hy-CY7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="138" id="wiF-Jh-abd"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="diceImageView1" destination="xzi-Vp-Vpr" id="82l-JK-u46"/>
+                        <outlet property="diceImageView2" destination="8Ny-dK-stv" id="GWb-EZ-N3F"/>
+                        <outlet property="diceLogo" destination="bwG-Hg-vPh" id="Ny5-QI-Acp"/>
+                        <outlet property="rollBtn" destination="7Hf-hy-CY7" id="gA7-yi-cxw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
