--- a/Dicing/Base.lproj/Main.storyboard
+++ b/Dicing/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_5" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -20,63 +20,69 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="diceVC" customModule="Dicing" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="newbackground" translatesAutoresizingMaskIntoConstraints="NO" id="N6F-aI-iUg">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="414" id="1Vh-6B-T3U"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="bwG-Hg-vPh">
-                                <rect key="frame" x="107" y="20" width="200" height="171"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="171" id="FR3-9P-5mq"/>
-                                    <constraint firstAttribute="width" constant="200" id="w0X-KM-KRp"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="xzi-Vp-Vpr">
-                                <rect key="frame" x="67" y="271" width="120" height="120"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="120" id="YPO-ni-Q29"/>
-                                    <constraint firstAttribute="height" constant="120" id="mn0-ih-duj"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="8Ny-dK-stv">
-                                <rect key="frame" x="236" y="271" width="120" height="120"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="120" id="5Zh-99-3N6"/>
-                                    <constraint firstAttribute="width" constant="120" id="Goa-ZL-Xg9"/>
-                                </constraints>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Hf-hy-CY7">
-                                <rect key="frame" x="138" y="452" width="139" height="83"/>
-                                <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="50"/>
-                                <state key="normal" title="Roll">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="rollPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qK8-P5-IWj"/>
-                                </connections>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="60" translatesAutoresizingMaskIntoConstraints="NO" id="2mR-QU-B3F">
+                                <rect key="frame" x="67.666666666666686" y="196" width="240" height="420"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="YLT-Nw-9OE">
+                                        <rect key="frame" x="22" y="0.0" width="196" height="100"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="bwG-Hg-vPh">
+                                                <rect key="frame" x="0.0" y="0.0" width="196" height="100"/>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="oQ9-Bs-JYm">
+                                        <rect key="frame" x="0.0" y="160" width="240" height="100"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="8Ny-dK-stv">
+                                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="100" id="b1x-Gm-rTf"/>
+                                                    <constraint firstAttribute="height" constant="100" id="hUL-YP-5Ej"/>
+                                                </constraints>
+                                            </imageView>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="xzi-Vp-Vpr">
+                                                <rect key="frame" x="140" y="0.0" width="100" height="100"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="100" id="dF9-Sd-FUj"/>
+                                                    <constraint firstAttribute="width" constant="100" id="qtu-WF-DS1"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="456-OB-1eM">
+                                        <rect key="frame" x="73.666666666666671" y="320" width="93.000000000000014" height="100"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Hf-hy-CY7">
+                                                <rect key="frame" x="0.0" y="0.0" width="93" height="100"/>
+                                                <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="50"/>
+                                                <state key="normal" title="Roll">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="rollPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qK8-P5-IWj"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="N6F-aI-iUg" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="6VP-MJ-n2U"/>
-                            <constraint firstItem="xzi-Vp-Vpr" firstAttribute="top" secondItem="bwG-Hg-vPh" secondAttribute="bottom" constant="80" id="CFJ-Ti-JuI"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="7Hf-hy-CY7" secondAttribute="bottom" constant="201" id="DFJ-eS-zpt"/>
-                            <constraint firstItem="8Ny-dK-stv" firstAttribute="top" secondItem="bwG-Hg-vPh" secondAttribute="bottom" constant="80" id="E8I-65-9Gb"/>
-                            <constraint firstItem="bwG-Hg-vPh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="KqX-ca-62U"/>
-                            <constraint firstItem="N6F-aI-iUg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="NIP-hl-EEW"/>
-                            <constraint firstItem="7Hf-hy-CY7" firstAttribute="centerX" secondItem="bwG-Hg-vPh" secondAttribute="centerX" id="St5-2D-LHR"/>
-                            <constraint firstItem="bwG-Hg-vPh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Zur-8Q-yDd"/>
-                            <constraint firstItem="xzi-Vp-Vpr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="bWC-Mv-dOo"/>
-                            <constraint firstItem="N6F-aI-iUg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="i6T-2u-MPv"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8Ny-dK-stv" secondAttribute="trailing" constant="58" id="pS2-wa-bhr"/>
-                            <constraint firstItem="7Hf-hy-CY7" firstAttribute="top" secondItem="xzi-Vp-Vpr" secondAttribute="bottom" constant="61" id="wPB-4R-qAY"/>
-                            <constraint firstItem="7Hf-hy-CY7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="138" id="wiF-Jh-abd"/>
+                            <constraint firstItem="N6F-aI-iUg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="MH3-58-h1C"/>
+                            <constraint firstAttribute="trailing" secondItem="N6F-aI-iUg" secondAttribute="trailing" id="R3B-xF-RMk"/>
+                            <constraint firstItem="N6F-aI-iUg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="aJ3-gK-Vvj"/>
+                            <constraint firstAttribute="bottom" secondItem="N6F-aI-iUg" secondAttribute="bottom" id="hJw-TF-tVy"/>
+                            <constraint firstItem="2mR-QU-B3F" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="s3u-KA-Q0L"/>
+                            <constraint firstItem="2mR-QU-B3F" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xGr-f5-gGu"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -89,7 +95,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="140.57971014492756" y="132.88043478260872"/>
+            <point key="canvasLocation" x="140" y="132.26600985221674"/>
         </scene>
     </scenes>
     <resources>
